# animaOS

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEVELOPER.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.codex-skill-staging/cryptographic-auditor/: SKILL.md
.codex-skill-staging/security-auditor/: SKILL.md
apps/anima-mod/: anima-mod.config.yaml
apps/animus/: package.json
apps/animus/src/: cli.ts  (+8 more)
apps/api/: package.json  tsconfig.json
apps/desktop/: README.md  package.json  vite.config.ts
apps/server/: README.md  alembic.ini  alembic_core.ini  alembic_runtime.ini  cli.py  project.json  pyproject.toml
apps/site/: .env.example  astro.config.mjs  package.json
docs/: CHANGELOG.md  README.md  agent-graph.md  agent-orchestration-audit.md  build-release.md  discord.md  memory-system.md  roadmap.md  scratchboard.md  telegram.md  whitepaper.md
docs/architecture/: README.md  agent-runtime-improvements.md  agent-runtime-migration.md  memory-architecture-prd.md  memory-implementation-plan.md  memory-repo-analysis.md  memory-system.md
docs/ops/: implementation-plan.md
docs/prds/: README.md  memory-architecture.md  three-tier-architecture.md
docs/thesis/: competitor-analysis.md  cryptographic-hardening.md  ethics.md  inner-life.md  portable-core.md  repo-analysis-2026-03-18.md  research-report-2026-03-18.md  roadmap.md  succession-protocol.md  three-tier-architecture.md  whitepaper.md
scratchboard/_system/: active-tasks.md  done.md  inbox.md  task-memory.md
scripts/: run-uv.cjs  server-db-revision.cjs
soul/: soul.md
(+709 files in other folders)
