[workspace]
resolver = "2"
members = [
    "packages/anima-core",
    "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
repository = "https://github.com/G9000/animaOS"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
blake3 = "1.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
